@@ -1,3 +1,9 @@
+Wed Jun  4 19:34:41 1997  Laurent Pautet  <pautet@quasimodo.enst.fr>
+
+	* xe_back.adb: Fix problems in Set_Partition_Attribute due to
+ 	switch from Null_PID to Default_Partition as predefined partition
+ 	PID.
+
 Tue May 20 17:15:04 1997  Laurent Pautet  <pautet@dorine.enst.fr>
 
 	* xe_back.adb: Use first slot of tables to store the default type
